--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "lodash": "^4.17.21",
     "sortablejs": "^1.15.0",
     "vue": "^3.2.13",
     "vuedraggable": "^4.1.0"
